refactor: 메서드 순서 및 로직 변경